# CATSort

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test-pypi.yml
scripts/: bump.py
src/catsort/: __init__.py  sorter.py
src/catsort/core/: clustering.py  collision.py  utils.py
tests/: test_sorter.py  test_utils.py
