[project]
name = "CATSort"
version = "0.1.4"
description = "A collision-aware template matching spike sorter."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name="Lucas Beziers", email="lucas.beziers.pro@gmail.com" },
]
keywords = ["spike sorting", "neuroscience", "electrophysiology", "collisions", "template matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "isosplit6",
    "numba",
    "numpy",
    "scikit-learn",
    "scipy",
    "spikeinterface>=0.103.1",
]

[project.urls]
Homepage = "https://github.com/lucasbeziers/CATSort"
Repository = "https://github.com/lucasbeziers/CATSort"
Issues = "https://github.com/lucasbeziers/CATSort/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "mearec",
    "pandas",
    "pytest",
    "twine",
]